fix:overflow in frontend components

--- a/src/styles/home/sidebar/sidebar.css
+++ b/src/styles/home/sidebar/sidebar.css
@@ -87,7 +87,7 @@ position: relative;
       
         max-width: 100vw;
         /* background-color: white; */
-        height: 50px;
+        height: 40px;
         align-content: center;
 backdrop-filter: blur(40000px);
         flex-direction: row;
@@ -101,7 +101,7 @@ backdrop-filter: blur(40000px);
     }
 
     .main__sidebar>p:hover:after{
-        bottom: -10px;
+        bottom: -13px;
         height: 2px;
         width: 70px;
         left: -10px;
@@ -113,7 +113,7 @@ backdrop-filter: blur(40000px);
     
     .border__normal::after{
         /* position:absolute; */
-        bottom: -10px;
+        bottom: -13px;
         height: 2px;
         width: 0px;
         transform: 0.5s ease-in-out;
@@ -125,7 +125,7 @@ backdrop-filter: blur(40000px);
 
     }
     .border__click::after{
-bottom: -10px;
+bottom: -13px;
 left: -10px;
 height: 2px;
 width: 70px;
