--- a/src/styles/home/teacherContent/home.css
+++ b/src/styles/home/teacherContent/home.css
@@ -3,7 +3,7 @@
     display: flex;
    /* background-color: rgb(204, 255, 228); */
       /* justify-content:flex-start; */
-      width: 99vw;
+      width: 90vw;
       justify-content: space-between;
     gap:3rem;
     /* max-width: 100vw; */
@@ -14,10 +14,11 @@
 }
 .teacher__contents{
     flex:0.9;
+    /* max-width: 90vw; */
     overflow-y: hidden;
     padding-top: 50px;
     padding-bottom: 50px;
-    padding-right:50px;
+    /* padding-right:50px; */
     display: flex;
     /* gap:20px; */
     align-items: center;
@@ -165,8 +166,8 @@ width: 100%;
   }
 
   .div__home{
-      width: 100%;
-      margin-right: 40px;
+      width: 90%;
+      margin-right: 0px;
       display: flex;
       flex-direction: column;
       gap:40px;
@@ -246,7 +247,8 @@ width: 100%;
 
   .section__home{
       width: 100%;
-      padding: 20px 30px;
+      /* max-width: 90%; */
+      padding: 50px 0px;
 /* height: 300px; */
       white-space: nowrap;
       display: flex;
@@ -259,7 +261,7 @@ overflow: auto;
       gap:2rem;
       padding-bottom: 100px;
 
-      padding-right: 10px;
+      /* padding-right: 10px; */
       /* justify-content: space-around; */
       /* gap:5em; */
       /* padding: 20px; */
@@ -314,8 +316,9 @@ justify-content: center;
     /* width: 90%; */
     position: relative;
     height: 350px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
     display: flex;
+    width: 95%;
     background-color:rgba(200,227,195,10);
     border-radius: 30px 60px 30px 60px;
 }
@@ -370,6 +373,7 @@ top:30%;
       .section__home{
 /* display: grid;
 place-items: center;           */
+width: 90%;
           padding-right: 0px;
       }
       .items__content{
@@ -390,6 +394,7 @@ place-items: center;           */
         gap:80px;
     }
       .teacher__contents{
+          overflow: hidden;
           padding-top: 80px;
       }
     .dash__banner>img{
@@ -400,7 +405,7 @@ place-items: center;           */
         display: flex;
        /* background-color: rgb(204, 255, 228); */
           /* justify-content:flex-start; */
-          width: 99vw;
+          width: 90vw;
           flex-direction: column;
           justify-content: space-between;
         gap:5rem;
